# alcnet-attention-layer-convolution

./: .gitignore  LICENSE  METRICS.md  Makefile  Procfile.dev  README.md  RECON.md  dump.rdb  pyproject.toml
docs/: L23_H0_heatmap.png:Zone.Identifier  masked_cnn.png:Zone.Identifier
src/: __init__.py  api.py  db.py  main.py  runner.py  worker.py
tests/: conftest.py  test_api.py  test_attention.py  test_config.py  test_db.py  test_film.py  test_models.py  test_runner.py
