[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "alcnet"
version = "0.1.0"
description = "Attention-Layer Convolutional Network — CNN processing of transformer attention maps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Srinivas Harish" }]

dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "datasets>=2.14",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "tqdm>=4.60",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "celery[redis]>=5.3",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.25",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
alcnet-train = "src.runner:main"

[tool.setuptools.packages.find]
include = ["src*"]

# ── Ruff ──────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line-length handled by formatter
    "E702",   # multiple statements on one line — will fix manually
    "B905",   # zip without strict — not always needed
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Mypy ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
